edited slide screen xml

--- a/app/src/main/res/layout/slide_screen2.xml
+++ b/app/src/main/res/layout/slide_screen2.xml
@@ -20,8 +20,7 @@
             android:textStyle="bold" />
         <ImageView
             android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/meditation_tech" />
+            android:layout_height="@dimen/img_width_height" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
