--- a/app/src/main/res/layout/slide_screen3.xml
+++ b/app/src/main/res/layout/slide_screen3.xml
@@ -19,8 +19,7 @@
             android:textStyle="bold" />
         <ImageView
             android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/diet_plan" />
+            android:layout_height="@dimen/img_width_height" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
