tweaks to slides xml and welcome activity

--- a/app/src/main/res/layout/slide_screen1.xml
+++ b/app/src/main/res/layout/slide_screen1.xml
@@ -17,9 +17,11 @@
             android:layout_marginBottom="@dimen/slide_title"
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
+
         <ImageView
             android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height" />
+            android:layout_height="@dimen/img_width_height"
+            android:background="@drawable/mobile" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
