--- a/app/src/main/res/layout/slide_screen3.xml
+++ b/app/src/main/res/layout/slide_screen3.xml
@@ -19,7 +19,8 @@
             android:textStyle="bold" />
         <ImageView
             android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height" />
+            android:layout_height="@dimen/img_width_height"
+            android:background="@drawable/mobile" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
